--- a/app/src/main/res/layout/dash_board_job_feed_layout.xml
+++ b/app/src/main/res/layout/dash_board_job_feed_layout.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/newsView_newsFeed_RecyclerView_id"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_down_to_refresh_job_feed_id"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical">
+    android:layout_height="wrap_content">
 
-</android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/newsView_newsFeed_RecyclerView_id"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+
+    </android.support.v7.widget.RecyclerView>
+
+</android.support.v4.widget.SwipeRefreshLayout>
