--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimaryDark">#004d40</color>
     <color name="colorPrimary">#00695c</color>
     <color name="colorAccent">#004d40</color>
+    <color name="appBackGroundColor">#E0F2F1</color>
+    <color name="highlightColor">#80CBC4</color>
+    <color name="editBtnBackGround">#33b5e5</color>
+    <color name="saveBtnBackground">#00c851</color>
 </resources>
