--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bbdefb">
+    android:background="@color/appBackGroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,47 +11,48 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_pic_id"
-            android:layout_marginTop="16dp"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@drawable/profile_pic"/>
+            android:layout_marginTop="16dp"
+            android:src="@drawable/profile_pic" />
 
         <TextView
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#90caf9"
+            android:layout_marginTop="20dp"
+            android:background="@color/highlightColor"
+            android:padding="10dp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
             android:text="Password Change "
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
 
         <EditText
-            android:layout_margin="15dp"
             android:id="@+id/previous_password_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:hint="Previous Password"
             android:inputType="textPassword" />
 
         <EditText
-            android:layout_margin="15dp"
             android:id="@+id/new_passowrd_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:hint="New Password"
             android:inputType="textPassword" />
 
 
         <EditText
-            android:layout_margin="15dp"
             android:id="@+id/confirm_passwordid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:hint="Confirm Password"
             android:inputType="textPassword" />
 
@@ -65,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:background="#33b5e5"
+                android:background="@color/editBtnBackGround"
                 android:text="Edit" />
 
             <Button
@@ -73,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="#00c851"
+                android:background="@color/saveBtnBackground"
                 android:text="SAVE" />
 
         </RelativeLayout>
@@ -82,19 +83,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#eaeaea"
+            android:background="@color/highlightColor"
             android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
             android:paddingTop="10dp"
             android:text="Phone Number Change"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="#000000"
-            android:textStyle="bold"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+            android:textStyle="bold" />
 
         <EditText
-            android:layout_margin="15dp"
             android:id="@+id/user_phone_number_edit_text_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:hint="New number"
             android:inputType="phone" />
 
@@ -109,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:background="#33b5e5"
+                android:background="@color/editBtnBackGround"
                 android:text="Edit" />
 
             <Button
@@ -117,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="#00c851"
+                android:background="@color/saveBtnBackground"
                 android:text="SAVE" />
 
         </RelativeLayout>
