--- a/app/src/main/res/layout/student_profile_info.xml
+++ b/app/src/main/res/layout/student_profile_info.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:background="@color/appBackGroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,9 +13,10 @@
             android:id="@+id/edit_student_info_btn_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#33b5e5"
             android:layout_gravity="right"
-            android:text="Edit"/>
+            android:layout_margin="15dp"
+            android:background="@color/editBtnBackGround"
+            android:text="Edit" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,58 +24,65 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="30"
-                android:layout_gravity="center"
-                android:textStyle="bold"
                 android:layout_height="wrap_content"
-                android:text="Id Card : "/>
+                android:layout_gravity="center"
+                android:layout_weight="30"
+                android:paddingLeft="15dp"
+                android:text="Id Card : "
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/student_id_card_image_view_id"
                 android:layout_width="0dp"
-                android:layout_weight="70"
                 android:layout_height="200dp"
-                android:src="@drawable/id_card"
-                android:contentDescription="Id card of student" />
+                android:layout_weight="70"
+                android:contentDescription="Id card of student"
+                android:src="@drawable/id_card" />
 
         </LinearLayout>
 
         <TextView
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/highlightColor"
+            android:paddingBottom="10dp"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
             android:text="Reference person : "
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
         <EditText
             android:id="@+id/ref_person_name_edit_view_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Give ref person name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:padding="15dp" />
 
         <EditText
             android:id="@+id/contact_number_edit_view_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Give contact number"
-            android:inputType="number" />
+            android:inputType="number"
+            android:padding="15dp" />
 
         <EditText
             android:id="@+id/relation_edit_view_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Give relation with ref person"
-            android:inputType="text" />
+            android:inputType="text"
+            android:padding="15dp" />
 
         <Button
             android:id="@+id/save_student_info_btn_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00c851"
             android:layout_gravity="right"
-            android:text="SAVE"/>
+            android:layout_margin="15dp"
+            android:background="@color/saveBtnBackground"
+            android:text="SAVE" />
 
     </LinearLayout>
 
