--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -91,6 +91,11 @@
         android:layout_marginRight="30dp"
         android:layout_weight="15">
 
+        <ProgressBar
+            android:id="@+id/sign_up_progress_bar_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/nextToCategoryBtn_id"
             android:layout_width="match_parent"
