minor UX update

--- a/app/src/main/res/layout/student_profile_info.xml
+++ b/app/src/main/res/layout/student_profile_info.xml
@@ -28,7 +28,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="30"
                 android:paddingLeft="15dp"
-                android:text="Id Card : "
+                android:text="Your ID Card : "
                 android:textStyle="bold" />
 
             <RelativeLayout
@@ -51,7 +51,6 @@
             </RelativeLayout>
 
         </LinearLayout>
-
 
         <TextView
             android:layout_width="match_parent"
