--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -194,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="30"
-                android:text="Id Card : "
+                android:text="Your ID Card : "
                 android:textStyle="bold" />
 
             <RelativeLayout
