about fragment added, admin number changed, forgot password changed to a hyper link

--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -35,7 +35,17 @@
             <item
                 android:id="@+id/nav_phone_admin_id"
                 android:icon="@drawable/phone_call"
-                android:title="01521498113" />
+                android:title="01707703703" />
+
+        </menu>
+    </item>
+
+    <item android:title="">
+        <menu>
+
+            <item
+                android:id="@+id/nav_about_id"
+                android:title="About" />
 
             <item
                 android:id="@+id/nav_log_out_id"
