--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -45,6 +45,7 @@
 
             <item
                 android:id="@+id/nav_about_id"
+                android:icon="@drawable/ic_info_black_48dp"
                 android:title="About" />
 
             <item
